création carrousel img et p

--- a/index.html
+++ b/index.html
@@ -17,9 +17,30 @@
 	<a class="btn devis" href="mailto:contact@print-it.tld">Devis</a>
 </header>
 <main>
+	<script src="./assets/script.js" defer></script>
 	<div id="banner">
-		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
-		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
+		<div class="slider">
+			<div class="carousel active">
+				<img src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
+				<p>Impressions tous formats <span>en boutique et en ligne</span></p>
+			</div>
+			<div class="carousel">
+				<img src="./assets/images/slideshow/slide2.jpg" alt="Banner Print-it">
+				<p>Tirages haute définition grand format <span>pour vos bureaux et events</span></p>
+			</div>
+			<div class="carousel">
+				<img src="./assets/images/slideshow/slide3.jpg" alt="Banner Print-it">
+				<p>Grand choix de couleurs <span>de CMJN aux pantones</span></p>
+			</div>
+			<div class="carousel">
+				<img src="./assets/images/slideshow/slide4.png" alt="Banner Print-it">
+				<p>Autocollants <span>avec découpe laser sur mesure</span></p>
+			</div>
+		</div>
+		<div class="arrow">
+			<img class="arrow_left" src="assets/images/arrow_left.png" alt="flèche gauche">
+			<img class="arrow_right" src="assets/images/arrow_right.png" alt="flèche droite">
+		</div>
 		<div class="dots">
 		</div>
 	</div>
@@ -92,7 +113,7 @@
 					<h3>Se rendre en boutique</h3>
 					<p>5, rue Yves Noël,<br>
 						35200 Rennes<br>
-						<img class="inline-icon" src="./assets/images/metro.png" alt="metro"/> Clémenceau</p>
+						<img class="inline-icon" src="./assets/images/metro.png" alt="metro">Clémenceau</p>
 				</div>
 			</div>
 			<div>
@@ -113,7 +134,7 @@
 	</div>
 	<div>
 		<p>5, rue Yves Noël,35200 Rennes<br>
-			<img src="./assets/images/metro.png" alt="metro"/> Clémenceau</p>
+			<img src="./assets/images/metro.png" alt="metro">Clémenceau</p>
 	</div>
 	<div>
 		<a href="mailto:contact@print-it.tld" class="btn">Nous écrire</a>
@@ -123,6 +144,5 @@
 		<img class="footer-logo" src="./assets/images/logo.png" alt="Print it ! Impressions d'entreprises" >
 	</div>
 </footer>
-<script src="./assets/script.js"></script>
 </body>
 </html>
