--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 			<img class="arrow_right" src="assets/images/arrow_right.png" alt="flèche droite">
 		</div>
 		<div class="dots">
+			<div class="dot dot_selected"></div>
+			<div class="dot"></div>
+			<div class="dot"></div>
+			<div class="dot"></div>
 		</div>
 	</div>
 	<section id="about-us" class="container">
